--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:parentActivityName="com.oscar.agenda.activities.WelcomeActivity" />
         <activity
             android:name="com.oscar.agenda.activities.EdicionDetalleActivity"
+            android:parentActivityName="com.oscar.agenda.activities.CalendarioMensualActivity"
             android:label="@string/title_activity_edicion_detalle"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
