--- a/AndroidUtilities/build.gradle
+++ b/AndroidUtilities/build.gradle
@@ -1,15 +1,17 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+
     defaultConfig {
-        applicationId "agenda.oscar.com.agenda"
-        minSdkVersion 17
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -24,19 +26,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-    //compile 'com.android.support:support-v4:23.4.0'
-    compile('com.android.support:support-v4:23.4.0') {
-        force = true;
-    }
-
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:support-vector-drawable:23.4.0'
-    compile 'com.prolificinteractive:material-calendarview:1.4.2'
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.android.support:support-annotations:24.2.0'
     testCompile 'junit:junit:4.12'
 }
